--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: '0 9 * * *'
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
 jobs:
   build-iso:
