--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -20,9 +20,9 @@ jobs:
           ls
           pacman -Syu --noconfirm archiso grub git
           bash ./build.sh
-#      - name: upload isos 
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: upload-isos 
-#          path: |
-#            build
+      - name: upload isos 
+        uses: actions/upload-artifact@v4
+        with:
+          name: upload-isos 
+          path: |
+            build
