--- a/iso/grub/grub.cfg
+++ b/iso/grub/grub.cfg
@@ -45,8 +45,8 @@ fi
 
 # Set default menu entry
 default=archlinux
-timeout=15
-timeout_style=menu
+timeout=0
+timeout_style=hidden
 
 
 # Menu entries
